# aircalc

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  project.pro  resources.qrc
.github/workflows/: build-binaries.yml  build_binaries.yml  cmake-multi-platform.yml  linux-build.yml  windows-build.yml
config/: formulas.json
src/: application.cpp  formula.cpp  formulas_calculator.cpp  formulawidget.cpp  labeled_line_edit.cpp  main.cpp  mainwindow.cpp  parameditwidget.cpp  resources.qrc  vtabbar.cpp  vtabwidget.cpp
src/include/: application.hpp  formula.hpp  formulas_calculator.hpp  formulawidget.hpp  labeled_line_edit.hpp  mainwindow.hpp  parameditwidget.hpp  vtabbar.hpp  vtabwidget.hpp
